# meetmind

./: .gitignore  README.md  graph.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
context_graph/: __init__.py  audio.py  cli.py  embeddings.py  env.py  extract.py  merge.py  pipeline.py  projects.py  schema.py  slackbot.py  transcribe.py  viz.py
meetmind/: __init__.py  cli.py  docread.py  embeddings.py  export.py  extract.py  meetily.py  pipeline.py  record.py  review.py  slackbot.py  store.py  timeline.py  transcribe.py  validate.py
samples/: README.md
samples/example-graphs/: coding-agent.json  marketing-automation.json  voice-agent.json
scripts/: context-graph-bot.service  install_bot_task.ps1  meetmind-bot.service  run_bot.ps1
tests/: run_all.py  test_features.py  test_merge_advanced.py  test_merge_offline.py
transcripts/: 1st.txt  2026-06-01-meeting1.txt  2026-06-08-meeting2.txt  2026-06-15-meeting3.txt  2nd.txt  m1.txt  m2.txt
